--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 <div class="wrapper">
     <body>
         <header id="start">
-            <a href="#start"><img src="img/123.png" alt="" class="img2112"></a>
+            <a href="#start"><img src="/img/123.png" alt="" class="img2112"></a>
             <a href="#inf"><p class="text1hh">Информация обо мне</p></a>
             <a href="#pop1"><p class="text2hh">Примеры работ</p></a>
             <a href="#am1"><p class="text3hh">Связь со мной</p></a>
-            <a href="#inf"><img src="img/Инфа.png" alt="" class="infoimg"></a>
+            <a href="#inf"><img src="/img/Инфа.png" alt="" class="infoimg"></a>
         </header>
         <main>
             <div class="div1">
-                <img src="img/Rectangle 5.png" alt="12" class="img15">
-                <img src="img/Rectangle 14.png " alt="56" class="img214">
-                <img src="img/Rectangle 7.png" alt="757" class="img37">
+                <img src="/img/Rectangle 5.png" alt="12" class="img15">
+                <img src="/img/Rectangle 14.png " alt="56" class="img214">
+                <img src="/img/Rectangle 7.png" alt="757" class="img37">
                 <p class="tx11">Личное сайт портфолио</p>
                 <p class="tx12">Разработка интерфейса, <br>верстка сайта</p>
                 <a href="#inf"><p class="text101">Узнать подробнее</p></a>
             </div>
             <div class="div2" id="inf">
-                <img src="img/Rectangle 15.png" class="img315">
+                <img src="/img/Rectangle 15.png" class="img315">
                 <p class="tx22">Информация обо мне</p>
                 <p class="tx23">Здравствуйте, я Борисов Кирилл Александрович.
                     Я учусь на среднее профессиональное образование по направлению разработка интерфейсов и WEB-разработка.<br>
@@ -48,13 +48,14 @@
              <div class="div3" id="pop1">
                 <p class="tx31" >Мои примеры работ</p>
              <p class="tx32">Работы в HTML:</p>
-            <img src="img/Rectangle 23.png" class="img31">
-            <img src="img/Rectangle 21.png" class="img32">
-            <img src="img/Rectangle 22.png" class="img33">
+            <img src="/img/Rectangle 23.png" class="img31">
+            <img src="/img/Rectangle 21.png" class="img32">
+            <img src="/img/Rectangle 22.png" class="img33">
             <p class="tx33">Работы в Figma:</p>
-            <a href="https://www.figma.com/file/5Ki1ibk53RWJzvRXzTotAI/Mobile-App-Screen-%D0%91%D0%BE%D1%80%D0%B8%D1%81%D0%BE%D0%B2-%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BB-%D0%9F-22?node-id=0%3A1&t=RhIxpbnQpSfK9vyJ-1"><img src="img/Rectangle 55.png" class="img34"></a>
-            <a href="https://www.figma.com/file/v2iu97UPb77LeyRMZm91Mh/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0-2_%D0%91%D0%BE%D1%80%D0%B8%D1%81%D0%BE%D0%B2_%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BB_%D0%9F-22-(Copy)?t=RhIxpbnQpSfK9vyJ-1"><img src="img/Rectangle 17.png" class="img35"></a>
-            <a href="https://www.figma.com/file/uuEUJqIeQ8quFzQDmdz5ra/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0-3_%D0%91%D0%BE%D1%80%D0%B8%D1%81%D0%BE%D0%B2_%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BB_%D0%9F-22-(Copy)?t=RhIxpbnQpSfK9vyJ-1"><img src="img/Rectangle 19.png" class="img36"></a>
+            
+            <a href="https://www.figma.com/file/5Ki1ibk53RWJzvRXzTotAI/Mobile-App-Screen-%D0%91%D0%BE%D1%80%D0%B8%D1%81%D0%BE%D0%B2-%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BB-%D0%9F-22?node-id=0%3A1&t=RhIxpbnQpSfK9vyJ-1"><img src="/img/Rectangle 55.png" class="img34"></a>
+            <a href="https://www.figma.com/file/v2iu97UPb77LeyRMZm91Mh/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0-2_%D0%91%D0%BE%D1%80%D0%B8%D1%81%D0%BE%D0%B2_%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BB_%D0%9F-22-(Copy)?t=RhIxpbnQpSfK9vyJ-1"><img src="/img/Rectangle 17.png" class="img35"></a>
+            <a href="https://www.figma.com/file/uuEUJqIeQ8quFzQDmdz5ra/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0-3_%D0%91%D0%BE%D1%80%D0%B8%D1%81%D0%BE%D0%B2_%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BB_%D0%9F-22-(Copy)?t=RhIxpbnQpSfK9vyJ-1"><img src="/img/Rectangle 19.png" class="img36"></a>
             </div>
             <div class="div4" id="am1">
                 <p class="tx41" >Связаться со мной</p>
@@ -81,10 +82,10 @@
         </main>
         <footer>
             <div class="div6">
-                <a href="#start"><img src="img/daD.png" class="img61"></a>
-                <a href="https://t.me/purpurika1"><img src="img/png-clipart-computer-icons-scalable-graphics-telegram-logo-blue-angle-PhotoRoom 1.png" class="img62"></a>
-                <a href="https://vk.com/purpurika"><img src="img/vk-i-mail-ru-udalili-iz-app-store_16642210761663422058-PhotoRoom 1.png" class="img63"></a>
-                <a href="gmail.com"><img src="img/1200x630wa-PhotoRoom 1.png" class="img64"></a>
+                <a href="#start"><img src="/img/daD.png" class="img61"></a>
+                <a href="https://t.me/purpurika1"><img src="/img/png-clipart-computer-icons-scalable-graphics-telegram-logo-blue-angle-PhotoRoom 1.png" class="img62"></a>
+                <a href="https://vk.com/purpurika"><img src="/img/vk-i-mail-ru-udalili-iz-app-store_16642210761663422058-PhotoRoom 1.png" class="img63"></a>
+                <a href="gmail.com"><img src="/img/1200x630wa-PhotoRoom 1.png" class="img64"></a>
 
             </div>
         </footer>
